--- a/src/templates/form.html
+++ b/src/templates/form.html
@@ -14,6 +14,8 @@
         <input type="text" name="url"><br><br>
         <label for="description">Description: </label>
         <input type="text" name="description"><br><br>
+        <label for="newFile">New file: </label>
+        <input type="file" name="newFile"><br><br>
         <input type="submit" value="Submit">
     </form>
 </body>
